@@ -1,3 +1,8 @@
+2013-03-13  Paul Thomas  <pault@gcc.gnu.org>
+
+	PR fortran/56575
+	* gfortran.dg/class_56.f90: New test.
+
 2013-03-10  Paul Thomas  <pault@gcc.gnu.org>
 
 	PR fortran/55362
